--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -154,7 +154,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/BXwTFNXDD4SjVt6H78-It1YgNj8=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
+                                     src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -169,8 +169,8 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle"/>
+                             src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -190,7 +190,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/xmIEDF_cDxZz4E2mLiV5N52_yPo=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/YnsFJMclS5aYmtiAMSX0_ThumbSPRINcore.png"
+                                     src="https://d2vvqscadf4c1f.cloudfront.net/YnsFJMclS5aYmtiAMSX0_ThumbSPRINcore.png"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -205,8 +205,8 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle"/>
+                             src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -226,7 +226,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/VcMKL8A-nGdHEgrHRy5bPuqFhtU=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/fMahox0zTOW4gYkMMjmN_ThumbSPRINcoreAdv.png"
+                                     src="https://d2vvqscadf4c1f.cloudfront.net/fMahox0zTOW4gYkMMjmN_ThumbSPRINcoreAdv.png"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -241,8 +241,8 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle"/>
+                             src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -265,7 +265,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/XPW5zGBgneHuCKQx52cNcAwsuBQ=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/wc9ORhpRQUataALq2ejc_ThumbSPRINcoreDevOps2.png"
+                                     src="https://d2vvqscadf4c1f.cloudfront.net/wc9ORhpRQUataALq2ejc_ThumbSPRINcoreDevOps2.png"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -280,8 +280,8 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle"/>
+                             src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -302,7 +302,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/iM6y2WkaU8PWBuGAHtA3OKqT-4A=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/DkBQKd4WQxWTCLnFwJCR_ThumbSPRINcoreUltimate.png"
+                                     src="https://d2vvqscadf4c1f.cloudfront.net/DkBQKd4WQxWTCLnFwJCR_ThumbSPRINcoreUltimate.png"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -335,7 +335,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/wH-V7RfYswB8Q95LIdGzx-QLxKk=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/J8mqML4lQRmUmM4gdCW0_Thumb_Thymeleaf.png"
+                                     src="https://d2vvqscadf4c1f.cloudfront.net/J8mqML4lQRmUmM4gdCW0_Thumb_Thymeleaf.png"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -350,8 +350,8 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle"/>
+                             src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
