--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -155,6 +155,7 @@
                             <div class="course-box-image-container">
                                 <img role="presentation"
                                      src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
+                                     th:src="@{images/SpringIntroThumb.png}"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -170,6 +171,7 @@
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
                              src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
                              class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
@@ -191,6 +193,7 @@
                             <div class="course-box-image-container">
                                 <img role="presentation"
                                      src="https://d2vvqscadf4c1f.cloudfront.net/YnsFJMclS5aYmtiAMSX0_ThumbSPRINcore.png"
+                                     th:src="@{images/SpringCoreThumb.png}"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -206,6 +209,7 @@
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
                              src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
                              class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
@@ -227,6 +231,7 @@
                             <div class="course-box-image-container">
                                 <img role="presentation"
                                      src="https://d2vvqscadf4c1f.cloudfront.net/fMahox0zTOW4gYkMMjmN_ThumbSPRINcoreAdv.png"
+                                     th:src="@{images/SpringCoreAdvancedThumb.png}"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -242,6 +247,7 @@
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
                              src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
                              class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
@@ -266,6 +272,7 @@
                             <div class="course-box-image-container">
                                 <img role="presentation"
                                      src="https://d2vvqscadf4c1f.cloudfront.net/wc9ORhpRQUataALq2ejc_ThumbSPRINcoreDevOps2.png"
+                                     th:src="@{images/SpringCoreDevOpsThumb.png}"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -281,6 +288,7 @@
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
                              src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
                              class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
@@ -303,6 +311,7 @@
                             <div class="course-box-image-container">
                                 <img role="presentation"
                                      src="https://d2vvqscadf4c1f.cloudfront.net/DkBQKd4WQxWTCLnFwJCR_ThumbSPRINcoreUltimate.png"
+                                     th:src="@{images/SpringCoreUltimateThumb.png}"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -336,6 +345,7 @@
                             <div class="course-box-image-container">
                                 <img role="presentation"
                                      src="https://d2vvqscadf4c1f.cloudfront.net/J8mqML4lQRmUmM4gdCW0_Thumb_Thymeleaf.png"
+                                     th:src="@{images/ThymeleafThumb.png}"
                                      class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
@@ -351,6 +361,7 @@
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
                              src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
                              class="img-circle" style="max-height: 30px;"/>
                         <div class="small course-author-name">
                             John Thompson
