--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -135,14 +135,14 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Spring Framework Guru</h1>
-        <p class="lead">Online Courses for Spring Framework</p>
+        <p class="lead" th:text="#{index.courses.tagline}">Online Courses for Spring Framework</p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Spring Framework Guru Courses</h1>
+            <h1 th:text="#{index.courses.headline}">Spring Framework Guru Courses</h1>
         </div>
     </div>
 
