--- a/src/main/resources/templates/fragments/jumbotron.html
+++ b/src/main/resources/templates/fragments/jumbotron.html
@@ -138,6 +138,12 @@
         <p class="lead" th:text="#{index.courses.tagline}">Tag line</p>
     </div>
 </div>
-
+<div class="container" th:fragment="footer">
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <p class="navbar-text pull-left">© 2016 - Spring Framework Guru</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
