--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -144,13 +144,34 @@
             <h1 th:text="${product.courseName}">Spring Framework Guru - Course Name</h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row course-listing">
         <div class="col-md-6">
-
-                <img src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
-                     class="center-block"/>
-
+            <div class="row">
+                <div class="col-md-12">
+                    <img align="left"
+                         src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
+                         th:src="@{'/images/' + ${product.imageUrl}}"
+                         class="center-block"/>
+                </div>
+            </div>
+            <div class="row course-listing-extra-info col-xs-12">
+                <div class="col-xs-8">
+                    <img align="left" alt="John Thompson"
+                         src="https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                         th:src="@{'/images/' + ${product.author.imageUrl}}"
+                         class="img-circle" style="max-height: 30px;"/>
+                    <div class="small course-author-name" th:text="${product.author.firstName + ' ' + product.author.lastName}">
+                        John Thompson
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="small course-price" align="right" th:text="${product.price > 0 ? '$' + product.price : 'FREE'}">
+                        $99
+                    </div>
+                </div>
+            </div>
         </div>
+
         <div class="col-md-6">
              <div>
                  <h2 th:text="${product.courseSubtitle}">Course Title</h2>
