Using Iteration with Fragments

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -147,6 +147,30 @@
     </div>
 
     <div class="row course-list list">
+        <div class="row course-list list">
+            <div th:each="product, it : ${products}">
+                <div th:if="${(it.count gt 0 and it.count lt 4)}">
+                    <div th:replace="fragments/productdiv :: productdiv">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row course-list list">
+        <div class="row course-list list">
+            <div th:each="product, it : ${products}">
+                <div th:if="${(it.count gt 3 and it.count lt 7)}">
+                    <div th:replace="fragments/productdiv :: productdiv">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row course-list list" th:remove="all">
         <div class="col-md-4">
             <div class="course-listing">
                 <div class="row">
@@ -263,7 +287,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" th:remove="all">
         <div class="col-md-4">
             <div class="course-listing">
                 <div class="row">
