Display Error Alert Using Bootstrap CSS

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -199,7 +199,7 @@
 
     <div class="row">
         <div class="col-md-offset-6 col-md-4">
-            <button class="btn-success" th:text="#{button.buy.now}">Buy Now!</button>
+            <button class="btn-success" th:text="#{button.buy.now}" th:action="'/checkout'">Buy Now!</button>
         </div>
     </div>
 </div>
